--- a/src/main/webapp/ListagemDeTarefas.xhtml
+++ b/src/main/webapp/ListagemDeTarefas.xhtml
@@ -9,51 +9,51 @@
 	<h:outputStylesheet library="css" name="styles.css"/>
 </h:head>
 <h:body>
-	<h:form>
-		<h:panelGrid columns="2">
+<!-- 	<h:form> -->
+<!-- 		<h:panelGrid columns="2"> -->
 
-			<h:outputText value="Número" />
-			<h:inputText value="#{tarefaBean.tarefa.id}" />
+<!-- 			<h:outputText value="Número" /> -->
+<!-- 			<h:inputText value="#{tarefaBean.tarefa.id}" /> -->
 
-			<h:outputText value="Título/Descrição" />
-			<h:inputText value="#{tarefaBean.tarefa.titulo}" />
+<!-- 			<h:outputText value="Título/Descrição" /> -->
+<!-- 			<h:inputText value="#{tarefaBean.tarefa.titulo}" /> -->
 
-			<h:outputText value="Responsável" />
-			<h:selectOneMenu>
-				<f:selectItem itemValue="" itemLabel="Todos"/>
-				<f:selectItems value="#{tarefaBean.tarefas}" var="tar" 
-					itemValue="#{tar.titulo}" itemLabel="#{tar.titulo}" />
-			</h:selectOneMenu>
+<!-- 			<h:outputText value="Responsável" /> -->
+<!-- 			<h:selectOneMenu> -->
+<!-- 				<f:selectItem itemValue="" itemLabel="Todos"/> -->
+<!-- 				<f:selectItems value="#{tarefaBean.tarefas}" var="tar"  -->
+<!-- 					itemValue="#{tar.titulo}" itemLabel="#{tar.titulo}" /> -->
+<!-- 			</h:selectOneMenu> -->
 
-			<h:outputText value="Situação" />
-			<h:selectOneMenu value="#{tarefaBean.tarefa.concluida}">
-				<f:selectItem itemValue="true" itemLabel="concluída" />
-				<f:selectItem itemValue="false" itemLabel="em aberto" />
-			</h:selectOneMenu>
+<!-- 			<h:outputText value="Situação" /> -->
+<!-- 			<h:selectOneMenu value="#{tarefaBean.tarefa.concluida}"> -->
+<!-- 				<f:selectItem itemValue="true" itemLabel="concluída" /> -->
+<!-- 				<f:selectItem itemValue="false" itemLabel="em aberto" /> -->
+<!-- 			</h:selectOneMenu> -->
 
-			<h:commandButton value="Buscar" action="#{tarefaBean.filtrarTarefas}" />
-			<h:commandLink value="Cadastrar Tarefa"
-				action="CadastrarTarefa.xhtml" />
-		</h:panelGrid>
+<!-- <!-- 			<h:commandButton value="Buscar" action="#{tarefaBean.filtrarTarefas}" /> --> -->
+<!-- 			<h:commandLink value="Cadastrar Tarefa" -->
+<!-- 				action="CadastrarTarefa.xhtml" /> -->
+<!-- 		</h:panelGrid> -->
 
-		<h1>Lista de Tarefas</h1>
+<!-- 		<h1>Lista de Tarefas</h1> -->
 
-		<h:dataTable value="#{tarefaBean.tarefas}" var="t">
-			<h:column>#{t.id}</h:column>
-			<h:column>#{t.titulo}</h:column>
-			<h:column>[responsável]</h:column>
-			<h:column>
-			[Editar] | 
-			<h:commandButton value="Excluir Tarefa"
-					action="#{tarefaBean.excluirTarefa}">
-					<f:setPropertyActionListener target="#{tarefaBean.id}"
-						value="#{t.id}" />
-					<!-- 						<f:viewParam name="id" value="#{t.id}" required="true" /> -->
-				</h:commandButton>
-			| [Concluir]
-		</h:column>
-		</h:dataTable>
-	</h:form>
+<!-- 		<h:dataTable value="#{tarefaBean.tarefas}" var="t"> -->
+<!-- 			<h:column>#{t.id}</h:column> -->
+<!-- 			<h:column>#{t.titulo}</h:column> -->
+<!-- 			<h:column>[responsável]</h:column> -->
+<!-- 			<h:column> -->
+<!-- 			[Editar] |  -->
+<!-- 			<h:commandButton value="Excluir Tarefa" -->
+<!-- 					action="#{tarefaBean.excluirTarefa}"> -->
+<!-- 					<f:setPropertyActionListener target="#{tarefaBean.id}" -->
+<!-- 						value="#{t.id}" /> -->
+<!-- 											<f:viewParam name="id" value="#{t.id}" required="true" /> -->
+<!-- 				</h:commandButton> -->
+<!-- 			| [Concluir] -->
+<!-- 		</h:column> -->
+<!-- 		</h:dataTable> -->
+<!-- 	</h:form> -->
 
 
 </h:body>
